--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -7,6 +7,7 @@
 @import "tailwindcss/utilities";
 
 @import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap");
+@import url("https://use.fontawesome.com/releases/v5.6.3/css/all.css");
 
 body {
   font-family: "Montserrat", sans-serif;
